[project]
name = "near-api-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "base58>=2.1.1",
    "borsh-construct>=0.1.0",
    "construct>=2.10.68",
    "construct-typing>=0.5.6",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]
