[project]
name = "near-payment-channel"
version = "0.1.0"
description = "NEAR Payment Channel SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["ed25519>=1.5", "near-api-py", "uuid>=1.30"]

[tool.uv.sources]
near-api-py = { path = "../near-api-py" }

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.2"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
